--- a/partials/header.html
+++ b/partials/header.html
@@ -1,3 +1,8 @@
+<div class="logo">
+	<h1>Century 21</h1>
+	<h2>Ponderosa Realty</h2>
+</div>
+
 <div class="account">
 	<span ng-hide="user">
 		<a ng-click="tools.user.signupModal()">{{'SITE.SIGNUP' | translate}}</a> |
