--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,2 +1,9 @@
-<h1>Side Header</h1>
-<p>Side Content</p>
+<h1><a href="#/shoeboxlist">{{view}}</a></h1>
+<div class="shoeboxlist" ng-controller="ShoeBoxCtrl">
+	<ul class="list-group">
+		<li class="list-group-item" ng-repeat="shoeBox in myShoeBoxes.results" title="{{shoeBox.description}}">
+			<a href="#/shoebox/{{shoeBox.objectId}}" title="">{{shoeBox.title}}</a>
+		</li>
+		<li><a class="btn btn-success btn-block" ng-click="tools.create()">Create New Shoebox</a></li>
+	</ul>
+</div>
