--- a/partials/header.html
+++ b/partials/header.html
@@ -9,16 +9,20 @@
 		<a ng-click="tools.user.loginModal()">{{'SITE.LOGIN' | translate}}</a>
 	</span>
 	<span ng-show="user">
-		<a class="username">{{user.fullName}}</a> 
-		<a class="logout" ng-click="tools.user.logout()" class="logout"> <i class="fa fa-sign-out"></i></a>
+		<a href="#/messages" class="icon"> <i class="fa fa-bell"></i></a>
+		<a href="#/tasks" class="icon"> <i class="fa fa-envelope"></i></a>
+		<a class="username">{{user.name}}</a>
+		<a class="logout icon" ng-click="tools.user.logout()" class="logout"> <i class="fa fa-sign-out"></i></a>
 	</span>
 </div>
 <!-- <h1 id="siteTitle">{{'SITE.TITLE' | translate}}</h1> -->
 <nav>
 	<ul>
-		<li><a href="#/" title="">Home</a></li>
-		<li><a href="#/shoeboxlist" title="">My Boxes</a></li>
-		<li><a href="#/itemlist" title="">My Items</a></li>
+		<li><a href="#/agents" title="">Agents</a></li>
+		<li><a href="#/property" title="">Property</a></li>
+		<li><a href="#/clients" title="">Clients</a></li>
+		<li><a href="#/tools" title="">Tools</a></li>
+		<!-- <li><a href="#/" title="">Messages</a></li> -->
 		<!-- <li><a href="#/" title="Home"><i class="fa fa-home"></i> <span>{{'SITE.NAV.HOME' | translate}}</span></a></li>
 		<li ng-show="tools.user.is('Admin')"><a ng-href="#/admin" title="Visit the Admin Console"><i class="fa fa-dashboard"></i> {{'SITE.NAV.ADMIN' | translate}}</a></li> -->
 	</ul>
