Improved Call Center

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -472,6 +472,14 @@ img.grayscale {
 }
 
 /*OVERRIDES*/
+.ringing{
+	background: #0E0;
+	color: #000;
+}
+.completed{
+	background: #040;
+	color: #FFF;
+}
 a{
 	cursor: pointer;
 }
