--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,9 +1,6 @@
-<h1><a href="#/shoeboxlist">{{view}}</a></h1>
-<div class="shoeboxlist" ng-controller="ShoeBoxCtrl">
+<h1><a>{{view}}</a></h1>
+<div>
 	<ul class="list-group">
-		<li class="list-group-item" ng-repeat="shoeBox in myShoeBoxes.results" title="{{shoeBox.description}}">
-			<a href="#/shoebox/{{shoeBox.objectId}}" title="">{{shoeBox.title}}</a>
-		</li>
-		<li><a class="btn btn-success btn-block" ng-click="tools.create()">Create New Shoebox</a></li>
+		<li class="list-group-item"></li>
 	</ul>
 </div>
