--- a/partials/header.html
+++ b/partials/header.html
@@ -18,10 +18,11 @@
 <!-- <h1 id="siteTitle">{{'SITE.TITLE' | translate}}</h1> -->
 <nav>
 	<ul>
-		<li><a href="#/agents" title="">Agents</a></li>
-		<li><a href="#/property" title="">Property</a></li>
-		<li><a href="#/clients" title="">Clients</a></li>
-		<li><a href="#/callCenter" title="">Tools</a></li>
+		<!-- <li><a href="#/agents" title="">Agents</a></li> -->
+		<!-- <li><a href="#/property" title="">Property</a></li> -->
+		<!-- <li><a href="#/clients" title="">Clients</a></li> -->
+		<!-- <li><a href="#/tools" title="">Tools</a></li> -->
+		<li><a href="#/callCenter" title="">Call Center</a></li>
 		<!-- <li><a href="#/" title="">Messages</a></li> -->
 		<!-- <li><a href="#/" title="Home"><i class="fa fa-home"></i> <span>{{'SITE.NAV.HOME' | translate}}</span></a></li>
 		<li ng-show="tools.user.is('Admin')"><a ng-href="#/admin" title="Visit the Admin Console"><i class="fa fa-dashboard"></i> {{'SITE.NAV.ADMIN' | translate}}</a></li> -->
