--- a/partials/user/signupModal.html
+++ b/partials/user/signupModal.html
@@ -28,12 +28,12 @@
 							<input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="temp.user.lastName">
 						</div>
 					</div>
-					<!-- <div class="form-group">
+					<div class="form-group">
 						<label for="userPhone" class="col-lg-3 control-label">Phone</label>
 						<div class="col-lg-9">
 							<input type="tel" class="form-control" id="userPhone" ng-model="temp.user.phone">
 						</div>
-					</div> -->
+					</div>
 					<div class="form-group">
 						<label for="userEmail" class="col-lg-3 control-label">Email</label>
 						<div class="col-lg-9">
