--- a/partials/header.html
+++ b/partials/header.html
@@ -11,7 +11,7 @@
 	<span ng-show="user">
 		<a href="#/messages" class="icon"> <i class="fa fa-bell"></i></a>
 		<a href="#/tasks" class="icon"> <i class="fa fa-envelope"></i></a>
-		<a class="username">{{user.name}}</a>
+		<a class="username">{{user.fullName}}</a>
 		<a class="logout icon" ng-click="tools.user.logout()" class="logout"> <i class="fa fa-sign-out"></i></a>
 	</span>
 </div>
