Do Not Disturb Does not work

--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -6,7 +6,7 @@
 				<ul class="list-group">
 					<li class="list-group-item" ng-click="tools.call()">Place A Call</li>
 					<li class="list-group-item" ng-click="tools.takeFloor()">Take Floor</li>
-					<!-- <li class="list-group-item">Do Not Disturb</li> -->
+					<li class="list-group-item">Do Not Disturb</li>
 				</ul>
 			</div>
 		</div>
