Added caller name lookup

--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -4,8 +4,9 @@
 		<div class="col-md-3">
 			<div class="well">
 				<ul class="list-group">
-					<li class="list-group-item" ng-click="tools.call()">Place A Call</li>
-					<li class="list-group-item" ng-click="tools.takeFloor()">Take Floor</li>
+					<li class="list-group-item" ng-click="tools.takeFloor()">Take The Floor</li>
+					<!-- <li class="list-group-item" ng-click="tools.call()">Place A Call</li> -->
+					<li class="list-group-item"><a target="_new" href="https://www.hellofax.com/fax">Fax: 1 928-304-7157</a></li>
 					<!-- <li class="list-group-item">Do Not Disturb</li> -->
 				</ul>
 			</div>
