--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -6,7 +6,7 @@
 				<ul class="list-group">
 					<li class="list-group-item" ng-click="tools.takeFloor()">Take The Floor</li>
 					<!-- <li class="list-group-item" ng-click="tools.call()">Place A Call</li> -->
-					<li class="list-group-item"><a target="_new" href="https://www.hellofax.com/fax">Fax: 1 928-304-7157</a></li>
+					<li class="list-group-item"><a target="_new" href="https://www.hellofax.com/fax">Fax: 1928-366-5978</a></li>
 					<!-- <li class="list-group-item">Do Not Disturb</li> -->
 				</ul>
 			</div>
@@ -24,6 +24,7 @@
 				<h1 ng-show="temp.call.direction=='outbound'">Call To: {{temp.call.to}}</h1>
 				<h2>Made: {{tools.time(temp.call)}}</h2>
 				<p>{{temp.call.params.CallerName}}</p>
+				<p>{{temp.call.params.CallDuration}}</p>
 				<hr>
 				<form action="" method="POST" class="form-horizontal" role="form" ng-submit="tools.client.add(temp.client)">
 					<div class="form-group">
