--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -17,7 +17,7 @@
 		<div class="col-md-3">
 			<div class="well">
 				<ul class="list-group">
-					<li class="list-group-item {{call.status}}" title="{{tools.status(call)}}" 
+					<li class="list-group-item {{call.status}}" title="{{tools.time(call)}}" 
 					ng-repeat="call in calls | orderBy:'updatedAt':true" ng-click="tools.focus(call)">
 						<span>{{tools.display(call)}}</span>
 						<span ng-show="rootTools.user.is('Admin')"> -&gt; {{call.agent.firstName}}</span>
