--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -49,6 +49,13 @@
 							<input type="text" name="" id="callerName" class="form-control" ng-model="temp.client.name">
 						</div>
 					</div>
+					<div class="form-group">
+						<label for="mlsFile" class="col-sm-2 control-label">MLS File</label>
+						<div class="col-sm-10">
+							<input type="text" name="" id="mlsFile" class="form-control" ng-model="temp.client.mls">
+							<a class="btn btn-success btn-block" target="_new" href="http://members.flexmls.com/cgi-bin/mainmenu.cgi?cmd=url+brokerload/changelisting/step1a.html&comingfrom=searchresults&prefix=00&list_nbr={{temp.client.mls}}&newbgcolor=undefined" title="Open MLS File" ng-show="temp.client.mls">MLS File: {{temp.client.mls}}</a>
+						</div>
+					</div>
 			<!-- 		<button type="button" class="btn btn-success" ng-click="tools.call(temp.call.from)" ng-show="temp.call.direction=='inbound'">Call Client</button>
 					<button type="button" class="btn btn-success" ng-click="tools.call(temp.call.to)" ng-show="temp.call.direction=='outbound'">Call Client</button> -->
 					<button type="submit" class="btn btn-primary pull-right">Save</button>
