--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -10,6 +10,7 @@
 					</li>
 					<!-- <li class="list-group-item" ng-click="tools.call()">Place A Call</li> -->
 					<!-- <li class="list-group-item"><a target="_new" href="https://www.hellofax.com/fax">Fax: 1928-366-5978</a></li> -->
+					<li class="list-group-item">Phone: 4242-75-2121</li>
 					<!-- <li class="list-group-item">Do Not Disturb</li> -->
 				</ul>
 			</div>
@@ -31,6 +32,7 @@
 				<h2>Made: {{tools.time(temp.call)}}</h2>
 				<p>CID: {{temp.call.params.CallerName}}</p>
 				<p ng-show="temp.call.duration">Duration: {{temp.call.params.CallDuration}} seconds</p>
+				<!-- <img src="http://photos.flexmls.com//wmar/20140703190849742161000000.jpg" alt=""> -->
 				<div ng-show="!temp.call.duration">
 					<h2>Forward Call</h2>
 					<ul class="list-group">
