Call center working with control of defaults

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -480,6 +480,13 @@ img.grayscale {
 	background: #040;
 	color: #FFF;
 }
+.outbound{
+	border-right: 5px solid orange;
+}
+.inbound{
+	border-left: 5px solid #09F;
+}
+
 a{
 	cursor: pointer;
 }
