--- a/views/callcenter.html
+++ b/views/callcenter.html
@@ -43,11 +43,15 @@
 						</div>
 					</div>
 					<div class="form-group">
+						<label for="publicNotes" class="col-sm-2 control-label">Public Notes</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" id="publicNotes" placeholder="Public Notes" ng-model="temp.client.notes"></textarea>
+						</div>
+					</div>
+					<div class="form-group">
 						<label for="mlsFile" class="col-sm-2 control-label">MLS File</label>
 						<div class="col-sm-10">
-							<input type="text" name="" id="mlsFile" class="form-control" ng-model="temp.client.mls">
-							<a class="btn btn-info" target="_new" href="http://www.co.apache.az.us/parcelsearch/ParcelSearch.aspx?q={{temp.client.name}}&tab=Tax%20Information&ty=2013" title="County Assessor Search" ng-show="temp.client.name">Assessor Lookup</a>
-							<a class="btn btn-success" target="_new" href="http://members.flexmls.com/cgi-bin/mainmenu.cgi?cmd=url+brokerload/changelisting/step1a.html&comingfrom=searchresults&prefix=00&list_nbr={{temp.client.mls}}&newbgcolor=undefined" title="Open MLS File" ng-show="temp.client.mls">MLS File: {{temp.client.mls}}</a>
+					<textarea class="form-control" id="noteInput" placeholder="Private Notes" ng-model="temp.note"></textarea>
 						</div>
 					</div>
 			<!-- 		<button type="button" class="btn btn-success" ng-click="tools.call(temp.call.from)" ng-show="temp.call.direction=='inbound'">Call Client</button>
@@ -58,9 +62,9 @@
 				<div ng-show="temp.client.objectId">
 					<form action="" method="POST" class="form-horizontal clearfix" role="form" ng-submit="tools.saveNote(temp.note)">
 						<div class="form-group">
-							<label for="noteInput" class="col-sm-2 control-label">Notes</label>
+							<label for="noteInput" class="col-sm-2 control-label">Private Notes</label>
 							<div class="col-sm-10">
-								<textarea class="form-control" id="noteInput" placeholder="Notes" ng-model="temp.note"></textarea>
+								<textarea class="form-control" id="noteInput" placeholder="Private Notes" ng-model="temp.note"></textarea>
 							</div>
 						</div>
 						<button type="submit" class="btn btn-primary pull-right">Add Note</button>
